"Updated enableProjectTests into POM "